--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,22 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.11</version>
+      <!-- Same version as Codewars -->
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <!-- Same version as Codewars -->
+      <version>3.8.0</version>
+      <scope>test</scope>
+    </dependency>
+    <!-- Less sucky parameterizationf or JUnit -->
+    <dependency>
+      <groupId>pl.pragmatists</groupId>
+      <artifactId>JUnitParams</artifactId>
+      <version>1.1.1</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
